# tinker-laravel

./: LICENSE.md  README.md  artisan.html  index.html  package-lock.json  package.json  settings.html  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.vue  artisan.js  index.css  main.js  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: artisan.json  settings.json
src-tauri/src/: lib.rs  php.rs
src/pages/: Artisan.vue  Settings.vue
